test/octave.test/error/error-2.m
function g () error ("foo\n"); endfunction
function f () g endfunction
f
